<!--<resources>-->
<!--    <string name="app_name">Medicine Recognition App</string>-->

<!--    <string name="api_url">http://192.168.0.28/BackEnd-APi/MedRec/api_user.php</string>-->
<!--    <string name="api_vendor">http://192.168.0.28/BackEnd-APi/MedRec/api_vendor.php</string>-->
<!--    <string name="api_drug_supply">http://192.168.0.28/BackEnd-APi/MedRec/api_drug_supply.php</string>-->
<!--    <string name="api_drug_details">http://192.168.0.28/BackEnd-APi/MedRec/api_drug_details.php</string>-->
<!--    <string name="drug_image_url">http://192.168.0.28/BackEnd-APi/MedRec/DrugImage/</string>-->
<!--    <string name="api_cart">http://192.168.0.28/BackEnd-APi/MedRec/api_cart.php</string>-->
<!--    <string name="api_cart_item">http://192.168.0.28/BackEnd-APi/MedRec/api_cart_item.php</string>-->
<!--    <string name="api_order">http://192.168.0.28/BackEnd-APi/MedRec/api_order.php</string>-->
<!--    <string name="api_receipt">http://192.168.0.28/BackEnd-APi/MedRec/api_receipt.php</string>-->
<!--    <string name="api_patient">http://192.168.0.28/BackEnd-APi/MedRec/api_patient.php</string>-->
<!--    <string name="api_symptom">http://192.168.0.28/BackEnd-APi/MedRec/api_symptom.php</string>-->
<!--    <string name="api_drug_header">http://192.168.0.28/BackEnd-APi/MedRec/api_drug_header.php</string>-->
<!--    <string name="api_reminder">http://192.168.0.28/BackEnd-APi/MedRec/api_reminder.php</string>-->

<!--    <string name="store_name_placeholder">Farmasi Placeholder</string>-->
<!--    <string name="store_distance_placeholder">0.000 km</string>-->
<!--    <string name="store_status_placeholder">Open</string>-->
<!--    <string name="store_opening_time_placeholder">Opens 00:00 AM</string>-->
<!--    <string name="get_directions">Get Directions</string>-->
<!--    <string name="select_store">Select This Store</string>-->
<!--    -->
<!--    -->
<!--</resources>-->

<resources>
    <string name="app_name">Med Recog App</string>

    <string name="api_url">https://www.etourmersing.com/BackEnd-APi/MedRec/api_user.php</string>
    <string name="api_vendor">https://www.etourmersing.com/BackEnd-APi/MedRec/api_vendor.php</string>
    <string name="api_drug_supply">https://www.etourmersing.com/BackEnd-APi/MedRec/api_drug_supply.php</string>
    <string name="api_drug_details">https://www.etourmersing.com/BackEnd-APi/MedRec/api_drug_details.php</string>
    <string name="drug_image_url">https://www.etourmersing.com/BackEnd-APi/MedRec/DrugImage/</string>
    <string name="profile_image_url">https://www.etourmersing.com/BackEnd-APi/MedRec/ProfileImage/</string>
    <string name="vendor_image_url">https://www.etourmersing.com/BackEnd-APi/MedRec/ProfilePicture/</string>
    <string name="api_cart">https://www.etourmersing.com/BackEnd-APi/MedRec/api_cart.php</string>
    <string name="api_cart_item">https://www.etourmersing.com/BackEnd-APi/MedRec/api_cart_item.php</string>
    <string name="api_order">https://www.etourmersing.com/BackEnd-APi/MedRec/api_order.php</string>
    <string name="api_receipt">https://www.etourmersing.com/BackEnd-APi/MedRec/api_receipt.php</string>
    <string name="api_patient">https://www.etourmersing.com/BackEnd-APi/MedRec/api_patient.php</string>
    <string name="api_symptom">https://www.etourmersing.com/BackEnd-APi/MedRec/api_symptom.php</string>
    <string name="api_drug_header">https://www.etourmersing.com/BackEnd-APi/MedRec/api_drug_header.php</string>
    <string name="api_reminder">https://www.etourmersing.com/BackEnd-APi/MedRec/api_reminder.php</string>
    <string name="api_toyyibpay">https://www.etourmersing.com/BackEnd-APi/MedRec/api_toyyibpay.php</string>
    <string name="api_suggestion">https://www.etourmersing.com/BackEnd-APi/MedRec/api_suggestion.php?query=</string>
    <string name="api_suggestion2">https://www.etourmersing.com/BackEnd-APi/MedRec/api_suggestion2.php?query=</string>
    <string name="api_search">https://www.etourmersing.com/BackEnd-APi/MedRec/api_search.php</string>
    <string name="api_send_email">https://www.etourmersing.com/BackEnd-APi/MedRec/send_email.php</string>
    <string name="api_search_symptom">https://www.etourmersing.com/BackEnd-APi/MedRec/api_search_symptom.php?query=</string>
    <!--<string name="api_patient">http://192.168.0.16/BackEnd-APi/MedRec/api_patient.php</string>-->


    <string name="store_name_placeholder">Farmasi Placeholder</string>
    <string name="store_distance_placeholder">0.000 km</string>
    <string name="store_status_placeholder">Open</string>
    <string name="store_opening_time_placeholder">Opens 00:00 AM</string>
    <string name="get_directions">Get Directions</string>
    <string name="select_store">Select This Store</string>
</resources>